# the-alfred-brief

./: .env.example  CLAUDE.md  Makefile  PROJECT_STATUS.md
.github/workflows/: daily-brief.yml
backend/: main.py  pyproject.toml
backend/src/: __init__.py  config.py  db.py  mailer.py
backend/src/scrapers/: __init__.py  finance.py  immigration.py  tech.py
frontend/: package.json
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/app/preferences/: page.tsx
frontend/src/components/: CategoryFilter.tsx  DashboardHeader.tsx  Navbar.tsx  NewsCard.tsx  NewsGrid.tsx  PreferencesForm.tsx  PreferencesLookup.tsx  SubscribeHero.tsx
terraform/: main.tf  supabase.sql
terraform/migrations/: 02_add_tokens.sql  03_rls_policies.sql
