[tool.poetry]
name = "alfred-backend"
version = "0.1.0"
description = "The Alfred Brief - Python scraping backend"
authors = ["Ahmad Almezaal"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
python-dotenv = "^1.2.1"
supabase = "^2.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
